feat: room join functionality
