# internal/routes/room/room.go
@@ -20,6 +20,8 @@ func RegisterRoomRoute(e *gin.Engine, svcCtx *svc.ServiceContext) {
 
 	e.POST("/api/v1/room/create", middleware.Auth, roomHandler.RoomCreateHandler)
 
+	e.POST("/api/v1/room/join", middleware.Auth, roomHandler.RoomJoinHandler)
+
 	e.GET("/api/v1/room/:id", middleware.Auth, roomHandler.RoomGetHandler)
 
 	e.GET("/api/v1/room/:id/person", middleware.Auth, roomHandler.RoomPersonHandler)
